fix: add site favicon
- create site add favicon data
- show feedlist add favicon